--- a/public/css/admin/course.css
+++ b/public/css/admin/course.css
@@ -265,6 +265,13 @@
     height: 600px;
     margin-top: 30px;
 }
+.testPass{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    row-gap: 20px;
+    align-items: center;
+}
 .videoContainer{
     display: flex;
     justify-content: center;
