--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,35 @@
 .subNavImg{
     width: 30px;
 }
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.pagination li {
+    margin: 0 5px;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    background-color: #f5f5f5;
+    color: #333;
+}
+
+.pagination li.active {
+    background-color: #333;
+    color: #fff;
+}
+.pagination li a{
+    text-decoration: none;
+    color: black;
+}
 .subNavElement{
     display: flex;
     align-items: center;
