--- a/public/css/front/landing.css
+++ b/public/css/front/landing.css
@@ -202,7 +202,7 @@
     display: flex;
     margin: 50px 0;
     border-radius: 7px 7px 7px 7px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    /*box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;*/
 }
 
 .product-img {
@@ -320,7 +320,7 @@
     color: white;
 }
 .product-icons img{
-    width: 40px;
+    width: 25px;
 }
 .product-icons{
     display: flex;
