--- a/public/css/admin/dashboard.css
+++ b/public/css/admin/dashboard.css
@@ -16,7 +16,7 @@
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 .styled-table thead tr {
-    background-color: #0a64bf;
+    background-color: #163020;
     color: #ffffff;
     text-align: left;
 }
@@ -29,7 +29,7 @@
 }
 
 .styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
+    background-color: #ffffff;
 }
 
 .styled-table tbody tr:last-of-type {
