--- a/public/css/admin/navigationMain.css
+++ b/public/css/admin/navigationMain.css
@@ -76,7 +76,7 @@
     align-items: center;
     justify-content: start;
     column-gap: 5px;
-    background: #053d79;
+    background: #163020;
 }
 .navArrow{
    width: 15px;
