--- a/public/css/front/register.css
+++ b/public/css/front/register.css
@@ -9,7 +9,7 @@
     justify-content: end;
 }
 .registerFormWrap{
-    height: 100%;
+    height: auto;
     width: 30%;
     display: flex;
     flex-direction: column;
