--- a/public/css/admin/adminProduct.css
+++ b/public/css/admin/adminProduct.css
@@ -6,6 +6,11 @@
     margin-top: 50px;
     padding-bottom: 50px;
 }
+.productButtons{
+    display: flex;
+    justify-content: center;
+    column-gap: 10px;
+}
 .adminProduct{
     width: 300px;
     height: auto;
