--- a/public/css/front/landing.css
+++ b/public/css/front/landing.css
@@ -30,7 +30,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 23px;
+    font-size: 17px;
     font-family: 'PT Sans Narrow', sans-serif;
 }
 .webman p{
@@ -636,6 +636,16 @@
     }
     .pulse-button{
         width: 200px;
+    }
+    .webman {
+        height: 220px;
+    }
+    .webman p {
+        display: flex;
+        flex-direction: column;
+        row-gap: 5px;
+        letter-spacing: 2px;
+        font-size: 20px;
     }
 }
 
