--- a/public/css/admin/checkout.css
+++ b/public/css/admin/checkout.css
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
+    padding-bottom: 50px;
 }
 .checkoutLeftSide{
     width: 40%;
