--- a/public/css/admin/course.css
+++ b/public/css/admin/course.css
@@ -102,6 +102,7 @@
     border: 1px solid gray;
     border-radius: 10px;
     cursor: pointer;
+    font-size: 16px;
 }
 .navButton:hover{
     background: #fce001;
