--- a/public/css/admin/adminMain.css
+++ b/public/css/admin/adminMain.css
@@ -417,6 +417,9 @@ a{
     .errorPhoto a img{
         width: 80%;
     }
+    .mobileCartContainer{
+        left: 100px;
+    }
 }
 @media screen and (max-width: 767px) and (min-width: 250px){
     .errorPhoto a{
@@ -439,5 +442,8 @@ a{
     }
     .hamButtonAdmin{
         display: flex;
+    }
+    .mobileCartContainer{
+        left: 100px;
     }
 }
