--- a/public/css/admin/adminMain.css
+++ b/public/css/admin/adminMain.css
@@ -420,6 +420,9 @@ a{
     .mobileCartContainer{
         left: 100px;
     }
+    .logo img{
+        width: 177px;
+    }
 }
 @media screen and (max-width: 767px) and (min-width: 250px){
     .errorPhoto a{
@@ -445,5 +448,8 @@ a{
     }
     .mobileCartContainer{
         left: 100px;
+    }
+    .logo img{
+        width: 177px;
     }
 }
