--- a/public/css/front/register.css
+++ b/public/css/front/register.css
@@ -1,6 +1,6 @@
 .registerContainer{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: relative;
     background: url("../../images/banners/loginBanner.jpg");
     background-size: cover;
@@ -17,6 +17,7 @@
     align-items: center;
     background: black;
     opacity: 0.9;
+    padding: 20px 0px;
 }
 .registerFormWrap form{
     width: 75%;
