--- a/public/css/admin/adminMain.css
+++ b/public/css/admin/adminMain.css
@@ -24,6 +24,39 @@
     padding: 0;
 }
 
+.buttonPackageEdit{
+    display: flex;
+    column-gap: 10px;
+}
+
+#countEditBulk{
+    font-size: 16px;
+    color: white;
+}
+#countEditContainer{
+    display: flex;
+    column-gap: 15px;
+}
+#countResult{
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+#bulkEditLink{
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+    margin-top: 10px;
+    background: #44875d;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
 .pagination li {
     margin: 0 5px;
     padding: 5px 10px;
